force-app/main/default/objects/custom_create237__c/custom_create237__c.object-meta.xml
<CustomObject>
    <label>Custom created object237</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects237</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>