force-app/main/default/objects/custom_create237__c/fields/custom_create_237field699__c.field-meta.xml
<CustomField>
    <fullName>custom_create_237field699__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 237field699</label>
    <type>Checkbox</type>
</CustomField>